# SSL_LoginDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lxl/login/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ca_cert.pem
app/src/main/java/com/lxl/login/demo/: JniApiCall.java  LoginDialogFragment.java  MainActivity.java  PhoneDialogFragment.java  SSLClient.java  SetPasswordDialogFragment.java  TextWatcherAdapter.java  Utils.java  VcodeDialogFragment.java
app/src/main/java/com/lxl/login/demo/okhttp/: CallBackUtil.java  OkhttpUtil.java  RequestUtil.java
app/src/main/java/com/lxl/login/demo/ui/: LoginDialogFragment.java  PhoneDialogFragment.java  SetPasswordDialogFragment.java  TextWatcherAdapter.java  VcodeDialogFragment.java
app/src/main/jni/: appJNI.c
app/src/main/jni/include/: appJNI.h  jb_nanoHAL.h
app/src/main/res/layout/: activity_main.xml  login_layout.xml  phone_dialog.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/lxl/login/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
